[fix] - 알림 모달에 nowrap 속성 추가

--- a/RLab/src/main/webapp/resources/css/common.css
+++ b/RLab/src/main/webapp/resources/css/common.css
@@ -452,6 +452,7 @@ header{
     box-sizing: border-box;
     background-color: white;
 	border-bottom: 1px solid gray;
+	white-space: nowrap;
 }
 .read_content{
 	background-color: #d5d2d2;
